--- a/TechnicalDocumentationPage.html
+++ b/TechnicalDocumentationPage.html
@@ -78,9 +78,9 @@
       {
         margin-bottom: 100px;
       }
-      @media only screen and (max-width: 600px) {
-        body {
-            background-color: lightblue;
+      @media only screen and (max-width: 320px) {
+        #navbar {
+            position: relative;
              }
       }
     </style>
